--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,12 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello world</title>
-</head>
-<body>
-    <h1>Hello world desde ip {{ user_ip }}</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %} 
+    {{ super() }}
+    Bienvienda 
+{% endblock %}
+
+{% block content %}
+    {% if user_ip %}
+        <h1>Hello world desde ip {{ user_ip }}</h1>
+    {% else %}
+        <a href="{{ url_for('index') }}">Ir a inicio</a>
+    {% endif %}
+
+    <ul>
+    {% for item in todos %}
+        <li>{{item}}</li>
+    {% endfor %}
+    </ul>
+{% endblock %}
