--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% import 'macros.html' as macros %}
 
 {% block title %} 
     {{ super() }}
@@ -14,7 +15,7 @@
 
     <ul>
     {% for item in todos %}
-        <li>{{item}}</li>
+        {{ macros.render_todo(item) }}
     {% endfor %}
     </ul>
 {% endblock %}
